--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "Kalippan_ser",
     "description": "Kalippan_ser Bot- re-edited from asena. World’s first UserBot made for WhatsApp.",
-    "logo": "20211026_162134.png",
+    "logo": "https://i.ibb.co/K5bqKHr/20210928-161812.png",
     "keywords": ["whatsapp", "userbot", "Asena", "WhatsAsena", "bot", "api", "ai"],
     "repository": "https://github.com/kalippan-minnuz/kalippan_see",
     "website":   "under maintenance",
