--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "Ajuser",
-    "description": "Ajuser bot - re-edited from asena. World’s first UserBot made for WhatsApp.",
-    "logo": "20211026_162134.png",
+    "name": "Kalippan__ser",
+    "description": "Kalippan_ser bot - re-edited from asena. World’s first UserBot made for WhatsApp.",
+    "logo": "https://ibb.co/yyW3Ybd/20211026_162134.png",
     "keywords": ["whatsapp", "userbot", "Asena", "WhatsAsena", "bot", "api", "ai"],
     "repository": "https://github.com/aju001/Ajuser_v2",
     "website":   "under maintenance",
