--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "description": "Kalippan_ser bot - re-edited from asena. World’s first UserBot made for WhatsApp.",
     "logo": "https://ibb.co/yyW3Ybd",
     "keywords": ["whatsapp", "userbot", "Asena", "WhatsAsena", "bot", "api", "ai"],
-    "repository": "https://github.com/aju001/Ajuser_v2",
+    "repository": "https://github.com/kalippan-minnu/Kalippan_ser",
     "website":   "under maintenance",
     "success_url": "under maintenance",
     "stack": "container",
