--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "Kalippan__ser",
     "description": "Kalippan_ser bot - re-edited from asena. World’s first UserBot made for WhatsApp.",
-    "logo": "https://ibb.co/7JWBj.png",
+    "logo": "https://i.hizliresim.com/6Bbj7i.jpg",
     "keywords": ["whatsapp", "userbot", "Asena", "WhatsAsena", "bot", "api", "ai"],
     "repository": "https://github.com/kalippan-minnu/Kalippan_ser",
     "website":   "under maintenance",
